# discord-one-day-one-zenn

./: .replit  README.md  main.py  pyproject.toml  requirements.txt
bot/: __main__.py  bot.py  keep_alive.py
